# MCP

./: .gitignore  .gitmodules  README.md
01_Intro MCP/: 01_Why_MCP.md  02_What_is_MCP.md  03_Clone + Compile a Pre Built MCP Server.md  04_Cursor MCP Documentation Overview.md  07_Exposing Tools From MCP Servers (Hello World Example).md  09_MCP Architecture Concepts_Hosts Servers Clients and the Protocol.md
01_Intro_MCP/: 05_Configure Cursor with a local MCP Server.md  06_Configure Claude Desktop with a local MCP Server.md  08_NodeJS Implementation Overview.md
02_MCP_Servers/: 01_The Theory of MCP Servers.md  02_MCP Inspector.md  03_LLM.txt.md  04_mcpdoc.md
03_Building_Securing_Contaneirizing_MCP_Server/: 01_Intro.md  02_Project_SetUp.md  03_Vibe_Coding_MCP_Server.md  04_Exposing_a_resource_in_our_MCP_Server.md  05_Beware the MCP Server Supply Chain.md  06_AI_Agent_Security_Risk.md  07_Why_Use_Docker_for_Your_MCP_Server.md  08_Wrap_MCP_Server_in_Docker_container.md  09_Integrating_MCP_running_in_Container.md  10_Testing_Containerazed_MCP_Server.md
04_Connecting_LLM_Clients/: 01_Intro.md  02_Understanding_Tool_Calling.md  04_The_LangChain_MCP_Adapter.md  05_Inside_the_MCP_Protocol_How Components_Interact.md  06_Setting_Up_Our_Environment.md  07_SSE_MCP_Hands_On.md  08_MCP_Client_1.md  09_MCP_Client_2.md  10_MCP_Client_3.md
05_SSE_Servers/: 01_Intro.md  02_SSE_Recap.md  03_MultiServerMCPClient.md  04_Awesome_MCP_Servers.md  05_Integrating_Playwright_MCP_Server_for_browser_automation.md
prova_langchain_playwright/: langchain_client.py  main.py  pyproject.toml
(+11 files in other folders)
